--- a/app/views/property_lists/_form.html.erb
+++ b/app/views/property_lists/_form.html.erb
@@ -12,33 +12,32 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :property %>
+    <%= form.label :Property %>
     <%= form.text_field :property %>
   </div>
 
   <div class="field">
-    <%= form.label :rent %>
-    <%= form.text_field :rent %>
+    <%= form.label :Rent %>
+    <%= form.text_field :rent %>RWF
   </div>
 
   <div class="field">
-    <%= form.label :age %>
-    <%= form.number_field :age %>
+    <%= form.label :age, "Buiding age" %> 
+    <%= form.number_field :age %>year/years old
   </div>
 
   <div class="field">
-    <%= form.label :address %>
-    <%= form.text_field :address %>
+    <%= form.label :Address %>
+    <%= form.text_area :address %>
   </div>
 
   <div class="field">
-    <%= form.label :remark %>
+    <%= form.label :Remark %>
     <%= form.text_area :remark %>
   </div>
-
-  <h2>Name of railway</h2>
+        <hr>
   <%= form.fields_for :properties do |properties_form| %>
-
+    <h2>Name of railway line<%=properties_form.index + 1%> </h2>
     <div class="field">
       <%= properties_form.label :name, "Name of railway line" %>
       <%= properties_form.text_field :line %>
