--- a/app/views/property_lists/show.html.erb
+++ b/app/views/property_lists/show.html.erb
@@ -6,13 +6,13 @@
 </p>
 
 <p>
-  <strong>Rent:</strong>
-  <%= @property_list.rent %>
+  <strong>Building age:</strong>
+  <%= @property_list.age %>
 </p>
 
 <p>
-  <strong>Building Age:</strong>
-  <%= @property_list.age %>
+  <strong>Rent:</strong>
+  <%= @property_list.rent %>
 </p>
 
 <p>
@@ -39,7 +39,7 @@
 
 <p>
   <strong>How many minutes walk:</strong>
-  <%= details.minute %>
+  <%= details.minute %> min/mins
 </p>
 <% end %>
 
